Bug 475992 - "Play a sound" preview doesn't respect Ocean theme
Summary: "Play a sound" preview doesn't respect Ocean theme
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_notify (other bugs)
Version First Reported In: master
Platform: unspecified Unspecified
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-23 05:12 UTC by tempqd
Modified: 2023-10-24 13:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tempqd 2023-10-23 05:12:56 UTC
SUMMARY
When previewing a notification's sound with Ocean sound theme applied, it always plays the Oxygen sound effect instead.

If FreeDesktop sound theme is applied, it plays the FreeDesktop sound effect, as expected.
If Oxygen sound theme is applied, it plays the Oxygen sound effect, as expected.


(Overall, the sound selection popup could be improved, it's a bit confusing seeing the filesystem.)


OS: KDE Neon Unstable (2023 10 22)
Comment 1 Nate Graham 2023-10-23 20:47:08 UTC
Cannot reproduce.
Comment 2 Ismael Asensio 2023-10-23 22:46:24 UTC
I think they meant the Notifications KCM, where efectively I forgot to update the default sound theme. Can reproduce.
Comment 3 Bug Janitor Service 2023-10-23 22:51:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3437
Comment 4 Ismael Asensio 2023-10-24 13:36:24 UTC
Git commit 9aa5975cee6fdea2ffc4748c163d2fadabed0c10 by Ismael Asensio.
Committed on 24/10/2023 at 15:24.
Pushed by iasensio into branch 'master'.

kcm/notifications: Set ocean as default sound theme

This needs to be in sync with the soundtheme KCM and KNotifications
defaults config
FIXED-IN: 6

M  +1    -1    kcms/notifications/soundthemeconfig.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9aa5975cee6fdea2ffc4748c163d2fadabed0c10