kcm/notifications: Set ocean as default sound theme

This needs to be in sync with the soundtheme KCM and KNotifications
defaults config

BUG: 475992
FIXED-IN: 6